evaluation/test_suite/negative/ub45/2.c
#include <stdio.h>

int main()
{
    int x[2] = {0};
    printf("%ld\n", &x[0] - &x[2]);
}
